--- a/index.html
+++ b/index.html
@@ -7,7 +7,64 @@
 </head>
 <body>
     <header>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus iure ex nisi distinctio temporibus totam, voluptas tempore unde ad a placeat expedita ipsum earum, ipsam incidunt. Sit nulla hic tempora.</p>
+     <nav>
+        <ul>
+            <li><a href="">WebStudio</a></li>
+            <li><a href="">Studio</a></li>
+            <li><a href="">Portfolio</a></li>
+            <li><a href="">Contacts</a></li>
+        </ul>
+     </nav>
+
+     <address>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+    </address>
     </header>
+
+    <main>
+        <section>
+            <h1>Effective Solutions
+                for Your Business</h1>
+                <button type="button">OrderService</button>
+        </section>
+        <section>
+            <ul>
+                <li><h2>Strategy</h2></li>
+                <li><p>Our goal is to identify the business problem to walk away with the perfect and creative solution. </p></li>
+                <li><h2>Punctuality</h2></li>
+                <li><p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
+                <li><h2>Diligence</h2></li>
+                <li><p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p></li>
+                <li><h2>Technologies</h2></li>
+                <li><p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
+        </ul>
+        </section>
+        
+        <section>
+            <h2>Our Team</h2>
+            <ul>
+         <li><img src="images/img.jpg" alt="foto mentora"></li>
+         <li><h3>Mark Guerrero</h3></li>
+         <li><p>Product Designer</p></li>
+         <li><img src="images/img (1).jpg"></li>
+         <li><h3>Tom Ford</h3></li>
+         <li><p>Frontend Developer</p></li>
+         <li><img src="images/img (3).jpg"></li>
+         <li><h3>Camila Garcia</h3></li>
+         <li><p>Marketing</p></li>
+         <li><img src="images/img (2).jpg"></li>
+         <li><h3>Daniel Wilson</h3></li>
+         <li><p>UI Designer</p></li>
+        </ul>
+        </section>
+    </main>
+
+    <footer>
+        <h2>WebStudio</h2>
+        <p>
+            Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+        </p>
+    </footer>
 </body>
 </html>
