--- a/index.html
+++ b/index.html
@@ -40,20 +40,20 @@
                 <li><p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
         </ul>
         </section>
-        
+
         <section>
             <h2>Our Team</h2>
             <ul>
-         <li><img src="images/img.jpg" alt="foto mentora"></li>
+         <li><img src="images/img.jpg" alt="Портрет Mark Guerrero"></li>
          <li><h3>Mark Guerrero</h3></li>
          <li><p>Product Designer</p></li>
-         <li><img src="images/img (1).jpg"></li>
+         <li><img src="images/img (1).jpg" alt="Портрет Tom Ford"></li>
          <li><h3>Tom Ford</h3></li>
          <li><p>Frontend Developer</p></li>
-         <li><img src="images/img (3).jpg"></li>
+         <li><img src="images/img (3).jpg" alt="Портрет Camila Garcia"></li>
          <li><h3>Camila Garcia</h3></li>
          <li><p>Marketing</p></li>
-         <li><img src="images/img (2).jpg"></li>
+         <li><img src="images/img (2).jpg" alt="Портрет Daniel Wilson"></li>
          <li><h3>Daniel Wilson</h3></li>
          <li><p>UI Designer</p></li>
         </ul>
