--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
         <section>
             <h2>Our Team</h2>
             <ul>
-         <li><img src="images/img.jpg" alt="Портрет Mark Guerrero"></li>
+         <li><img src="images/img.jpg" alt="Портрет Mark Guerrero" width="264"></li>
          <li><h3>Mark Guerrero</h3></li>
          <li><p>Product Designer</p></li>
-         <li><img src="images/img(1).jpg" alt="Портрет Tom Ford"></li>
+         <li><img src="images/img(1).jpg" alt="Портрет Tom Ford" width="264"></li>
          <li><h3>Tom Ford</h3></li>
          <li><p>Frontend Developer</p></li>
-         <li><img src="images/img(3).jpg" alt="Портрет Camila Garcia"></li>
+         <li><img src="images/img(3).jpg" alt="Портрет Camila Garcia" width="264"></li>
          <li><h3>Camila Garcia</h3></li>
          <li><p>Marketing</p></li>
-         <li><img src="images/img(2).jpg" alt="Портрет Daniel Wilson"></li>
+         <li><img src="images/img(2).jpg" alt="Портрет Daniel Wilson" width="264"></li>
          <li><h3>Daniel Wilson</h3></li>
          <li><p>UI Designer</p></li>
         </ul>
