--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </main>
 
     <footer>
-        <h2>WebStudio</h2>
+        <a href="./index.htm">WebStudio</a>
         <p>
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
