--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
             <li><a href="">Contacts</a></li>
         </ul>
      </nav>
-
      <address>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a href="tel:+11000111-11-11">+11(000)111-11-11</a>
@@ -44,18 +43,22 @@
         <section>
             <h2>Our Team</h2>
             <ul>
-         <li><img src="images/img.jpg" alt="Портрет Mark Guerrero" width="264"></li>
-         <li><h3>Mark Guerrero</h3></li>
-         <li><p>Product Designer</p></li>
-         <li><img src="images/img(1).jpg" alt="Портрет Tom Ford" width="264"></li>
-         <li><h3>Tom Ford</h3></li>
-         <li><p>Frontend Developer</p></li>
-         <li><img src="images/img(3).jpg" alt="Портрет Camila Garcia" width="264"></li>
-         <li><h3>Camila Garcia</h3></li>
-         <li><p>Marketing</p></li>
-         <li><img src="images/img(2).jpg" alt="Портрет Daniel Wilson" width="264"></li>
-         <li><h3>Daniel Wilson</h3></li>
-         <li><p>UI Designer</p></li>
+         <li><img src="images/img.jpg" alt="Mark Guerrero" width="264">
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+        </li>
+         <li><img src="images/img(1).jpg" alt="Портрет Tom Ford" width="264">
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+        </li>
+         <li><img src="images/img(3).jpg" alt="Camila Garcia" width="264">
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+        </li>
+         <li><img src="images/img(2).jpg" alt="Daniel Wilson" width="264">
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+        </li>
         </ul>
         </section>
     </main>
